--- a/productPage.css
+++ b/productPage.css
@@ -1,7 +1,7 @@
 *{
     padding: 0;
     margin: 0;
-    border-bottom: 1px solid red;
+    /* border-bottom: 1px solid red; */
 }
 h1, h2, h3{
     margin: 0;
@@ -11,9 +11,7 @@ img{
     padding: 0;
     margin: 0;
 }
-label{
-    font-size: 50%;
-}
+
 .container{
     display: flex;
     width: 100vw;
@@ -27,39 +25,20 @@ label{
     height: 40%;
     display: grid;
     background-color: rgb(255, 255, 255);
-    opacity: 85%;
+    opacity: 90%;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr;
     border-radius: 20px;
     border: 10px solid rgb(10, 10, 11);
 
 }
 
-.top{
-    grid-column: 1/2;
-    grid-row: 1/2;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.h3-selection{
-    position: absolute;
-    top: 8vh;
-    left: 1vw;
-}
 
-.img-perfume{
-    /* position: absolute;
-    left: 27vw;
-    top: -1vh; */
-    width: 25%;
-}
 
 
 .start{
     grid-column: 1/2;
-    grid-row: 2/3;
+    grid-row: 1/2;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -68,15 +47,16 @@ label{
 }
 .h3-amount{
     position: absolute;
-    left: 31vw;
-    bottom: 40vh;
+    left: 47vw;
+    bottom: 38vh;
+    font-size: x-large;
 }
 
 
 .image-container {
     position: relative;
-    width: 20%;
-    height: 40%;
+    width: 50%;
+    height: 100%;
     margin-bottom: 20px;
   }
 
@@ -105,12 +85,13 @@ label{
   .buttons label {
     display: inline-block;
     padding: 10px 20px;
-    margin: 0 5px;
+    margin-bottom: 7%;
     cursor: pointer;
     background-color: #000000;
     color: white;
     border-radius: 5px;
     transition: background-color 0.2s;
+
   }
 
   .buttons label:hover {
