--- a/productPage.css
+++ b/productPage.css
@@ -10,39 +10,121 @@ h1, h2, h3{
 img{
     padding: 0;
     margin: 0;
+    width: 20%;
+    
 }
+
+
 
 .container{
     display: flex;
     width: 100vw;
+    position: relative;
     height: 100vh;
     justify-content: center;
     align-items: center;
+    z-index: 0;
     background: linear-gradient(to bottom, black, #001f33, black);
+}
+.back{
+    position: absolute;
+    z-index: 1;
+    top: 67vh;
+    left: 32.5vw;
+}
+.back:hover{
+    transform: translateY(-10%);
 }
 .grid{
     width: 40%;
     height: 40%;
-    display: grid;
+    display: flex;
     background-color: rgb(255, 255, 255);
     opacity: 90%;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
+    /* grid-template-columns: 1fr;
+    grid-template-rows: 1fr; */
     border-radius: 20px;
-    border: 10px solid rgb(10, 10, 11);
 
+}
+
+.brand{
+    position: absolute;
+    color: black;
+    position: absolute;
+    color: black;
+    left: 3vw;
+    bottom: -1vh;
+
+}
+.left{
+    width: 20%;
+    height: 100%;
+    border-radius:1px;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    align-items: center;
+}
+.arrow{
+    display: inline;
+    width: 100%;
+    position: relative;
+    top: -22%;
+    animation: move-left-right 2s infinite;
+    left: 39%;
+}
+.arrow-img{
+        transform: rotateZ(90deg);
+}
+
+
+
+@keyframes move-left-right {
+    0% {
+      transform: translateX(0);
+    }
+    50% {
+      transform: translateX(10px);
+    }
+    100% {
+      transform: translateX(0);
+    }
+  }
+
+.circle-pay{
+    background-color: wheat;
+    width: 80%;
+    height: 20%;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    z-index: 2;
+    cursor: pointer;
+    transition: all ease-in-out 0.5s;
+}
+.circle-pay:hover{
+    background-color: white;
+    transform: translateY(-7%);
+}
+.h3-pay{
+    color: black;
 }
 
 
 
 
 .start{
-    grid-column: 1/2;
-    grid-row: 1/2;
+    /* grid-column: 1/2;
+    grid-row: 1/2; */
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 2%;
+    /* gap: 2%; */
+    width: 80%;
+    height: 100%;
     flex-direction: column;
 }
 .h3-amount{
