--- a/גיבוי/style.css
+++ b/גיבוי/style.css
@@ -271,124 +271,240 @@ align-items: center;
 }
 
 
-@media (max-width: 768px) {
-    .row-one, .row-two, .row-three {
-        display: flex
-    ;
+@media ( width <= 970px ){
+
+    
+
+    .row-one {
+        display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: stretch;
+        justify-content: start;
         text-align: center;
         margin-top: 5vh;
-        gap: 4%;
-        font-size: 73%;
+        gap: 2%;
     }
 
-    footer {
+    .nav{
         width: 100%;
-        height: 12vh;
+        height: 8vh;
         background-color: black;
-        display: flex
-    ;
+        display: flex;
         justify-content: center;
         align-items: center;
-        gap: 18%;
+        gap: 5%;
     }
 
-    .facebook, .whatsapp, .instagram {
-        width: 6%;
-        opacity: 76%;
-        margin-top: 5%;
-        position: relative;
+    
+
+    .checkout{
+         
+            height: auto;
+            width: 7%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            position: absolute;
+            right: 7%;
     }
 
-
+    .header {
+        width: 100%;
+        height: 3%;
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: start;
+        gap: 5%;
+        align-items: center;
+        margin-left: 25%;
+        background-color: black;
 }
 
-@media (max-width: 480px) {
-    .row-one , .row-two , .row-three{
-        display: flex
-    ;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
-        text-align: center;
-        margin-top: 0;
-        font-size: 50%;
-    }
 
-    a {
-        
-            width: 222%;
-            text-decoration: none;
-            color: white;
-            margin-top: 10%;
-        
-    }
+.price-row-one, .price-row-two, .price-row-three {
+    position: absolute;
+    color: black;
+    top: 88%;
+    font-size: 92%;
+}
+
+.row-two {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    text-align: center;
+    gap: 2%;
+}
+
+
+.row-three {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    text-align: center;
+    gap: 2%;
+}
+
+.best-seller {
+    color: white;
+    font-size: 117%;
+}
+
+.on-sale {
+    color: white;
+    font-size: 117%;
+}
+
+.other {
+    color: white;
+    font-size: 117%;
+}
+}
+
+
+
+@media ( width <= 750px ){
 
     .price-row-one, .price-row-two, .price-row-three {
         position: absolute;
         color: black;
-        top: 83%;
-        font-size: 152%;
+        top: 86%;
+        font-size: 77%;
     }
 
-    .product {
-        display: flex
-    ;
-        flex-direction: column;
-        justify-content: center;
+}
+
+
+
+
+@media ( width <= 556px ){
+
+    .price-row-one, .price-row-two, .price-row-three {
+        position: absolute;
+        color: black;
+        top: 85%;
+        font-size: 42%;
+    }
+
+    .header {
+        width: 100%;
+        height: 3%;
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: start;
+        gap: 5%;
         align-items: center;
-        width: 47%;
+        margin-left: 8%;
+        background-color: black;
+    }
+
+
+   .contact {
+        border: none;
+        background: none;
+        outline: none;
+        color: white;
+        font-size: 70%;
         margin-bottom: 10%;
     }
 
-    .main {
-        width: 100%;
-        height: 50%;
-        /* background-color: rgb(18, 18, 18); */
-        display: flex
-    ;
-        flex-direction: column;
-        gap: 0vh;
-        /* background-color: rgb(8 18 34); */
-        background: linear-gradient(to bottom, black, #001f33, black);
+    .navigation {
+        border: none;
+        background: none;
+        outline: none;
+        color: white;
+        font-size: 70%;
+        margin-bottom: 1%;
     }
 
-    .row-three div {
-        width: 49%;
-        /* background-color: rgb(18, 18, 18); */
-        /* background: linear-gradient(to bottom, black, #001f33); */
+    .sign-in {
+        border: none;
+        background: none;
+        outline: none;
+        color: white;
+        font-size: 70%;
+        margin-bottom: 13%;
     }
 
-    .footer{
-        height: 10vh;
-    }
+}
 
-    .facebook, .whatsapp, .instagram {
-        width: 11%;
-        opacity: 80%;
-        margin-top: 3%;
-        position: relative;
-    }
-
-    .row-two div {
-        width: 49%;
-    }
-
-    .nav{
-        align-items: baseline;
-    }
+@media ( width <= 550px ){
 
     .checkout {
         height: auto;
-        width: 17%;
-        display: flex
-    ;
+        width: 7%;
+        display: flex;
         justify-content: space-between;
         align-items: center;
         position: absolute;
-        right: 81%;
+        right: 7%;
+    }
+
+    #search{
+        width: 13%;
+    }
+
+}
+@media ( width <= 380 ){
+    .nav {
+        width: 81%;
+        height: 8vh;
+        background-color: black;
+        display: flex
+;
+        justify-content: center;
+        align-items: center;
+        gap: 5%;
+        font-size: 73%;
+    }
+    #search{
+        
+            width: 20%;
+            height: 18%;
+        
+    }
+
+}
+
+
+@media( width <= 440px ){
+     .best-seller , .on-sale , .other{
+        
+            color: white;
+            font-size: 70%;
+        
+
+    }
+
+    .nav {
+        width: 100%;
+        height: 8vh;
+        background-color: black;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 5%;
+        font-size: 67%;
+    }
+
+    #search {
+        width: 13%;
+        height: 18%;
+        position: relative;
+        left: -11%;
+    }
+
+}
+
+@media( width <= 320 ){
+
+    .price-row-one, .price-row-two, .price-row-three {
+        position: absolute;
+        color: black;
+        top: 85%;
+        font-size: 2%;
     }
 
     .contact {
@@ -396,23 +512,22 @@ align-items: center;
         background: none;
         outline: none;
         color: white;
-        position: absolute;
-        top: 2%;
-        right: 5%;
+        font-size: 64%;
+        margin-bottom: 10%;
     }
 
-    .sign-in {
+    a {
+        text-decoration: none;
         color: white;
-        position: absolute;
-        top: 1.9%;
-        left: 23%;
+        font-size: 83%;
     }
 
+    
 
-    .logo {
-        width: 39%;
-    }
-
-    }
+}
 
 
+
+
+
+  
