--- a/productPage.css
+++ b/productPage.css
@@ -11,12 +11,25 @@
     height: auto;
 
     
+
+
 }
-.social a img{
+.social-img{
     display: block; /* מסיר רווחים בין האלמנט ל-inline */
     width: 100%; /* מבטיח שהתמונה תתפוס את כל רוחב ה-a */
     height: auto; /* שומר על פרופורציות התמונה */
 }
+
+.whatsapp {
+  width: 215%;
+  position: relative;
+  top: 0.1vh;
+  left: 0.1vw;
+}
+
+
+
+
 h1, h2, h3{
     margin: 0;
     padding: 0;
@@ -51,7 +64,7 @@ img{
     top: 33vh;
     gap: 4%;
 }
-.social-img:hover{
+.social a:hover{
     transform: translateY(-7%);
 
 }
@@ -61,6 +74,13 @@ img{
     top: 67vh;
     left: 32.5vw;
 }
+
+.back-button{
+  border-radius: 5px;
+   background-color: antiquewhite;
+    width: 159%;
+}
+
 .back:hover{
     transform: translateY(-10%);
 }
@@ -79,7 +99,7 @@ img{
 .brand {
   position: absolute;
   color: black;
-  left: 1.5vw;
+  left: 5.5vw;
   bottom: -1vh;
   font-size: 95%;
 }
@@ -164,7 +184,7 @@ img{
 
 .image-container {
   position: relative;
-  width: 37%;
+  width: 59%;
   height: 100%;
   margin-bottom: 20px;
 }
@@ -214,365 +234,231 @@ img{
     display: none;
   }
 
-@media(width <= 2315px){
-  .image {
-    position: absolute;
-    width: 133%;
-    height: 100%;
-    left: -18%;
-    object-fit: cover;
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
-}
-}
+
+@media(max-width : 768px){
 
 
-@media(width <= 1262px){
-  .image-container {
-    position: relative;
-    width: 47%;
-    height: 100%;
-    margin-bottom: 20px;
-}
-
-.back {
-  position: absolute;
-  z-index: 1;
-  top: 67vh;
-  left: 32.5vw;
-}
-
-.brand {
-  position: absolute;
-  color: black;
-  left: 0.5vw;
-  bottom: 0vh;
-  font-size: 77%;
-}
-
-.circle-pay {
-  background-color: wheat;
-  width: 80%;
-  height: 15%;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  z-index: 2;
-  cursor: pointer;
-  transition: all ease-in-out 0.5s;
-
-}
-
-.arrow {
-  display: inline;
-  width: 100%;
-  position: relative;
-  top: -14%;
-  animation: move-left-right 2s infinite;
-  left: 34%;
-}
-
-.image-container {
-  position: relative;
-  width: 37%;
-  height: 100%;
-  margin-bottom: 20px;
-}
-
-}
-
-
-@media(width <= 1240px){
-
-  .buttons label {
-    display: inline-block;
-    padding: 4px;
-    font-size: 80%;
-    margin-bottom: 11%;
-    cursor: pointer;
-    background-color: #000000;
-    color: white;
-    border-radius: 5px;
-    transition: background-color 0.2s;
-}
-
-.image {
-  position: absolute;
-  width: 176%;
-  height: 77%;
-  left: -40%;
-  object-fit: cover;
-  opacity: 0;
-  top: 22%;
-  transition: opacity 0.3s ease-in-out;
-}
-
-}
-
-
-@media(width <= 840px){
-
-  .buttons label {
-    display: inline-block;
-    padding: 3%;
-    margin-bottom: 7%;
-    font-size: 70%;
-    cursor: pointer;
-    background-color: #000000;
-    color: white;
-    border-radius: 5px;
-    transition: background-color 0.2s;
-}
-
-}
-
-@media(width <= 560px){
-
-  .image {
-    position: absolute;
-    width: 70%;
-    height: 43%;
-    left: 14%;
-    object-fit: cover;
-    opacity: 0;
-    top: 2%;
-    transition: opacity 0.3s ease-in-out;
-}
-
-.brand {
-  position: absolute;
-  color: black;
-  left: 22.5vw;
-  bottom: 34vh;
-  font-size: 111%;
-}
-
-.social {
-  position: absolute;
-  display: flex
-;
-  justify-content: space-evenly;
-  width: 10%;
-  left: 7.8vw;
-  z-index: 5;
-  top: 19vh;
-  height: 47%;
-  gap: 0;
-  flex-direction: column;
-}
-
-.buttons {
-  width: 74%;
-  position: absolute;
-  left: 18vw;
-  display: flex
-;
-  justify-content: center;
-  align-items: center;
-  top: 55vh;
-  flex-direction: column;
-}
-
-.buttons label {
-  margin: -5%;
-  /* display: flex
-; */
-  padding: 1%;
-  margin-bottom: 11%;
-  font-size: 104%;
-  cursor: pointer;
-  background-color: #000000;
-  color: white;
-  /* position: absolute; */
-  top: 10vh;
-  border-radius: 10px;
-  transition: background-color 0.2s;
-  width: 54%;
-  text-align: center;
-}
-
-.arrow-img {
-  transform: rotateZ(90deg);
-  color: black;
-  fill: black;
-  width: 54%;
-}
-
-.arrow {
-  display: inline;
-  position: relative;
-  top: 33%;
-  width: 68%;
-  animation: move-left-right 2s infinite;
-  left: 238%;
-  color: black;
-  height: 8%;
-  justify-content: center;
-  background: black;
-  display: flex
-;
-  border-radius: 12px;
-  align-items: center;
-}
-
-.circle-pay {
-  background-color: black;
-  width: 125%;
-  height: 10%;
-  border-radius: 50%;
-  display: flex
-;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  z-index: 2;
-  left: 42vw;
-  cursor: pointer;
-  transition: all ease-in-out 0.5s;
-  bottom: 1vh;
-}
-
-}
-
-
-@media(width <= 300px){
   .grid {
-    width: 91%;
-    height: 68%;
-    display: flex;
+    width: 92%;
+    height: 53%;
+    display: flex
+;
     background-color: rgb(255, 255, 255);
     opacity: 90%;
     border-radius: 20px;
 }
 
-.image-container {
+.whatsapp {
+  width: 100%;
   position: relative;
-  width: 107%;
-  height: 100%;
-  margin-bottom: 20px;
+  top: 0.1vh;
+  left: 0.1vw;
 }
 
-.image {
-    position: absolute;
-    width: 89%;
-    height: 26%;
-    left: 5%;
-    object-fit: cover;
-    opacity: 0;
-    top: 12%;
-    transition: opacity 0.3s ease-in-out;
-
+  .image-container {
+    position: relative;
+    width: 75%;
+    height: 69%;
+    margin-bottom: 20px;
 }
 
 .brand {
   position: absolute;
   color: black;
-  left: 13.5vw;
-  bottom: 36vh;
-  font-size: 111%;
+  left: 16.5vw;
+  bottom: 0vh;
+  font-size: 129%;
+}
+.bottoms
+{
+    position: absolute;
+    bottom: 24%;
+}
+
+.back {
+  position: absolute;
+  z-index: 1;
+  top: 72vh;
+  left: 8.5vw;
+  width: 7%;
+}
+
+
+.circle-pay{
+  top: 55%;
+}
+
+
+
+.arrow{
+  top: -1%;
+}
+
+
+.social {
+  position: absolute;
+  display: flex
+;
+  justify-content: center;
+  align-items: center;
+  width: 5%;
+  left: 9.8vw;
+  z-index: 5;
+  top: 25vh;
+  gap: 4%;
+  flex-direction: column;
+
+}
+
+.social a img {
+margin-top: 80%;
+}
+
+}
+@media(max-width : 480px){
+  .grid {
+    width: 89%;
+    height: 80%;
+    display: flex
+;
+    background-color: rgb(255, 255, 255);
+    opacity: 90%;
+    border-radius: 20px;
+    position: absolute;
+    left: 2.5%;
+}
+
+.image-container {
+  position: relative;
+  width: 80%;
+  height: 25%;
+  top: -23%;
+}
+
+.brand {
+  position: absolute;
+  color: black;
+  left: 10.5vw;
+  bottom: -7vh;
+  font-size: 122%;
 }
 
 .buttons{
-  width: 100%;
-  position: absolute;
-  left: 9vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  top: 51vh;
+  display: flex
+;
   flex-direction: column;
+  position: relative;
+  top: -16%;
+  left: -13%;
 }
 
 .buttons label {
-  /* display: flex
-; */
-  padding: 2%;
-  margin-bottom: 11%;
-  font-size: 104%;
+  display: inline-block;
+  padding: 10px 20px;
+  margin-bottom: 18%;
+  width: 137%;
   cursor: pointer;
   background-color: #000000;
   color: white;
-  /* position: absolute; */
-  top: 10vh;
-  border-radius: 10px;
+  border-radius: 5px;
   transition: background-color 0.2s;
-  width: 54%;
   text-align: center;
 }
 
 .circle-pay {
-  background-color: black;
-  width: 161%;
-  height: 14%;
+  background-color: #000000;
+  width: 160%;
+  height: 13%;
   border-radius: 50%;
   display: flex
 ;
   justify-content: center;
+  color: white;
   align-items: center;
   position: absolute;
-  z-index: 2;
-  left: 37vw;
+  left: 202%;
+  left: 214%;
   cursor: pointer;
   transition: all ease-in-out 0.5s;
-  bottom: 1vh;
-}
-
-.h3-pay {
-  color: wheat;
-}
-
-.circle-pay:hover{
-  background-color: rgb(65, 4, 4);
-  transform: translateY(-7%);
-}
-
-.back a{
-  position: absolute;
-  left: -27vw;
-  bottom: -12vh;
-  width: 10vw;
+  top: 56vh;
 }
 
 .arrow {
-  display: inline;
-  width: auto;
-  position: relative;
-  top: 30%;
-  animation: move-left-right 2s infinite;
-  left: 223%;
-  color: black;
-  height: 7%;
-  justify-content: center;
-  background: black;
   display: flex
 ;
-  border-radius: 12px;
-  align-items: center;
+  width: 100%;
+  height: 7%;
+  position: absolute;
+  top: 60%;
+  animation: move-left-right 2s infinite;
+  left: 232%;
+  z-index: 2;
+  background: black;
+  justify-content: center;
 }
 
 .arrow-img {
   transform: rotateZ(90deg);
-  color: black;
-  fill: black;
-  width: 47%;
+  width: 44%;
+}
+.back {
+  position: absolute;
+  z-index: 1;
+  top: 80vh;
+  left: 46.5vw;
+  width: 29%;
+  height: 46%;
+}
+
+.back:hover{
+  transform: translateY(-2%);
+}
+.back a {
+  width: 50%;
+  height: 10%;
+  display: flex
+;
+  justify-content: center;
+  align-items: center;
+}
+
+.back-button{
+  border-radius: 5px;
+  background-color: #000000;
+  width: 159%;
+  height: 77%;
+  color: white;
+}
 
 
+.h3-pay {
+  color: white;
 }
 
 .social {
   position: absolute;
   display: flex
 ;
-  justify-content: space-evenly;
+  justify-content: center;
+  align-items: center;
   width: 12%;
-  left: 7.8vw;
-  z-index: 5;
-  top: 19vh;
-  height: 47%;
-  gap: 0;
+  left: 3.8vw;
+  z-index: 9;
+  top: 24vh;
+  gap: 4%;
   flex-direction: column;
+}
+.circle-pay:hover{
+  background-color: rgb(49, 0, 134);
+  transform: translateY(-7%);
+}
+
+.social a img {
+  display: flex
+;
+  width: 100%;
+  height: auto;
+  margin-top: 147%;
 }
 
 
