--- a/productPageThree.css
+++ b/productPageThree.css
@@ -1,227 +1,482 @@
-*{
-    padding: 0;
-    margin: 0;
-    /* border-bottom: 1px solid red; */
+* {
+  padding: 0;
+  margin: 0;
+  /* border-bottom: 1px solid red; */
 }
-.social a{
-    margin: 0;
-    padding: 0;
-    display: inline-block;
-    width: auto;
-    height: auto;
 
-    
-}
-.social a img{
-    display: block; /* מסיר רווחים בין האלמנט ל-inline */
-    width: 100%; /* מבטיח שהתמונה תתפוס את כל רוחב ה-a */
-    height: auto; /* שומר על פרופורציות התמונה */
-}
-h1, h2, h3{
-    margin: 0;
-    padding: 0;
-}
-img{
-    padding: 0;
-    margin: 0;
-    width: 20%;
-    
-}
+.social a {
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+  width: auto;
+  height: auto;
 
 
 
-.container{
-    display: flex;
-    width: 100vw;
-    position: relative;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
-    z-index: 0;
-    background: linear-gradient(to bottom, black, #001f33, black);
-}
-.social{
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 5%;
-    left: 30.8vw;
-    z-index: 5;
-    top: 33vh;
-    gap: 4%;
-}
-.social-img:hover{
-    transform: translateY(-7%);
-
-}
-.back{
-    position: absolute;
-    z-index: 1;
-    top: 67vh;
-    left: 32.5vw;
-}
-.back:hover{
-    transform: translateY(-10%);
-}
-.grid{
-    width: 40%;
-    height: 40%;
-    display: flex;
-    background-color: rgb(255, 255, 255);
-    opacity: 90%;
-    /* grid-template-columns: 1fr;
-    grid-template-rows: 1fr; */
-    border-radius: 20px;
-    position: relative;
 
 }
 
-.brand{
-  color: black;
+.social-img {
+  display: block;
+  /* מסיר רווחים בין האלמנט ל-inline */
+  width: 100%;
+  /* מבטיח שהתמונה תתפוס את כל רוחב ה-a */
+  height: auto;
+  /* שומר על פרופורציות התמונה */
+}
+
+.whatsapp {
+  width: 215%;
+  position: relative;
+  top: 0.1vh;
+  left: 0.1vw;
+}
+
+
+
+
+h1,
+h2,
+h3 {
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  padding: 0;
+  margin: 0;
+  width: 20%;
+
+}
+
+
+
+.container {
+  display: flex;
+  width: 100vw;
+  position: relative;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  z-index: 0;
+  background: linear-gradient(to bottom, black, #001f33, black);
+}
+
+.social {
   position: absolute;
-  left: 5vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 5%;
+  left: 30.8vw;
+  z-index: 5;
+  top: 33vh;
+  gap: 4%;
+}
+
+.social a:hover {
+  transform: translateY(-7%);
+
+}
+
+.back {
+  position: absolute;
+  z-index: 1;
+  top: 67vh;
+  left: 32.5vw;
+}
+
+.back-button {
+  border-radius: 5px;
+  background-color: antiquewhite;
+  width: 159%;
+}
+
+.back:hover {
+  transform: translateY(-10%);
+}
+
+.grid {
+  width: 40%;
+  height: 40%;
+  display: flex;
+  background-color: rgb(255, 255, 255);
+  opacity: 90%;
+  /* grid-template-columns: 1fr;
+  grid-template-rows: 1fr; */
+  border-radius: 20px;
+
+}
+
+.brand {
+  position: absolute;
+  color: black;
+  left: 7.5vw;
   bottom: -1vh;
+  font-size: 95%;
+}
 
+.left {
+  width: 20%;
+  height: 100%;
+  border-radius: 1px;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  align-items: center;
+}
 
+.arrow {
+  display: inline;
+  width: 100%;
+  position: relative;
+  top: -22%;
+  animation: move-left-right 2s infinite;
+  left: 39%;
 }
-.left{
-    width: 20%;
-    height: 100%;
-    border-radius:1px;
-    background-color: black;
-    display: flex;
-    justify-content: center;
-    position: relative;
-    align-items: center;
-}
-.arrow{
-    display: inline;
-    width: 100%;
-    position: relative;
-    top: -22%;
-    animation: move-left-right 2s infinite;
-    left: 39%;
-}
-.arrow-img{
-        transform: rotateZ(90deg);
+
+.arrow-img {
+  transform: rotateZ(90deg);
 }
 
 
 
 @keyframes move-left-right {
-    0% {
-      transform: translateX(0);
-    }
-    50% {
-      transform: translateX(10px);
-    }
-    100% {
-      transform: translateX(0);
-    }
+  0% {
+    transform: translateX(0);
   }
 
-.circle-pay{
-    background-color: wheat;
-    width: 80%;
-    height: 20%;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    z-index: 2;
-    cursor: pointer;
-    transition: all ease-in-out 0.5s;
+  50% {
+    transform: translateX(10px);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
 }
-.circle-pay:hover{
-    background-color: white;
-    transform: translateY(-7%);
+
+.circle-pay {
+  background-color: wheat;
+  width: 80%;
+  height: 20%;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  z-index: 2;
+  cursor: pointer;
+  transition: all ease-in-out 0.5s;
 }
-.h3-pay{
-    color: black;
+
+.circle-pay:hover {
+  background-color: white;
+  transform: translateY(-7%);
+}
+
+.h3-pay {
+  color: black;
 }
 
 
 
 
-.start{
-    /* grid-column: 1/2;
-    grid-row: 1/2; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* gap: 2%; */
-    width: 80%;
-    height: 100%;
-    flex-direction: column;
+.start {
+  /* grid-column: 1/2;
+  grid-row: 1/2; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* gap: 2%; */
+  width: 80%;
+  height: 100%;
+  flex-direction: column;
 }
-.h3-amount{
-    position: absolute;
-    left: 47vw;
-    bottom: 38vh;
-    font-size: x-large;
+
+.h3-amount {
+  position: absolute;
+  left: 47vw;
+  bottom: 38vh;
+  font-size: x-large;
 }
 
 
 .image-container {
+  position: relative;
+  width: 59%;
+  height: 100%;
+  margin-bottom: 20px;
+}
+
+.image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+#image1:checked~.image-container .image1 {
+  opacity: 1;
+
+}
+
+#image2:checked~.image-container .image2 {
+  opacity: 1;
+}
+
+#image3:checked~.image-container .image3 {
+  opacity: 1;
+}
+
+.buttons label {
+  display: inline-block;
+  padding: 10px 20px;
+  margin-bottom: 7%;
+  cursor: pointer;
+  background-color: #000000;
+  color: white;
+  border-radius: 5px;
+  transition: background-color 0.2s;
+
+}
+
+.buttons label:hover {
+  background-color: #001f33;
+  ;
+}
+
+button:active {
+  background-color: #001f33;
+}
+
+input[type="radio"] {
+  display: none;
+}
+
+
+@media(max-width : 768px) {
+
+
+  .grid {
+    width: 92%;
+    height: 53%;
+    display: flex;
+    background-color: rgb(255, 255, 255);
+    opacity: 90%;
+    border-radius: 20px;
+  }
+
+  .whatsapp {
+    width: 100%;
     position: relative;
-    width: 50%;
-    height: 100%;
+    top: 0.1vh;
+    left: 0.1vw;
+  }
+
+  .image-container {
+    position: relative;
+    width: 75%;
+    height: 69%;
     margin-bottom: 20px;
   }
 
-  .image {
+  .brand {
     position: absolute;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
+    color: black;
+    left: 20.5vw;
+    bottom: 0vh;
+    font-size: 129%;
   }
 
-  #image1:checked ~ .image-container .image1 {
-    opacity: 1;
-    
+  .bottoms {
+    position: absolute;
+    bottom: 24%;
   }
 
-  #image2:checked ~ .image-container .image2 {
-    opacity: 1;
+  .back {
+    position: absolute;
+    z-index: 1;
+    top: 72vh;
+    left: 8.5vw;
+    width: 7%;
   }
 
-  #image3:checked ~ .image-container .image3 {
-    opacity: 1;
+
+  .circle-pay {
+    top: 55%;
+  }
+
+
+
+  .arrow {
+    top: -1%;
+  }
+
+
+  .social {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 5%;
+    left: 9.8vw;
+    z-index: 5;
+    top: 25vh;
+    gap: 4%;
+    flex-direction: column;
+
+  }
+
+  .social a img {
+    margin-top: 80%;
+  }
+
+}
+
+@media(max-width : 480px) {
+  .grid {
+    width: 89%;
+    height: 80%;
+    display: flex;
+    background-color: rgb(255, 255, 255);
+    opacity: 90%;
+    border-radius: 20px;
+    position: absolute;
+    left: 2.5%;
+  }
+
+  .image-container {
+    position: relative;
+    width: 80%;
+    height: 25%;
+    top: -23%;
+  }
+
+  .brand {
+    position: absolute;
+    color: black;
+    left: 17.5vw;
+    bottom: -6vh;
+    font-size: 122%;
+  }
+
+  .buttons {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    top: -16%;
+    left: -13%;
   }
 
   .buttons label {
     display: inline-block;
     padding: 10px 20px;
-    margin-bottom: 7%;
+    margin-bottom: 18%;
+    width: 137%;
     cursor: pointer;
     background-color: #000000;
     color: white;
     border-radius: 5px;
     transition: background-color 0.2s;
-
+    text-align: center;
   }
 
-  .buttons label:hover {
-    background-color: #001f33;;
+  .circle-pay {
+    background-color: #000000;
+    width: 160%;
+    height: 13%;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    color: white;
+    align-items: center;
+    position: absolute;
+    left: 202%;
+    left: 214%;
+    cursor: pointer;
+    transition: all ease-in-out 0.5s;
+    top: 56vh;
   }
-  button:active{
-    background-color: #001f33;
+
+  .arrow {
+    display: flex;
+    width: 100%;
+    height: 7%;
+    position: absolute;
+    top: 60%;
+    animation: move-left-right 2s infinite;
+    left: 232%;
+    z-index: 2;
+    background: black;
+    justify-content: center;
   }
 
-  input[type="radio"] {
-    display: none;
+  .arrow-img {
+    transform: rotateZ(90deg);
+    width: 44%;
   }
 
- 
+  .back {
+    position: absolute;
+    z-index: 1;
+    top: 80vh;
+    left: 46.5vw;
+    width: 29%;
+    height: 46%;
+  }
 
-  
+  .back:hover {
+    transform: translateY(-2%);
+  }
+
+  .back a {
+    width: 50%;
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .back-button {
+    border-radius: 5px;
+    background-color: #000000;
+    width: 159%;
+    height: 77%;
+    color: white;
+  }
 
 
+  .h3-pay {
+    color: white;
+  }
+
+  .social {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 12%;
+    left: 3.8vw;
+    z-index: 9;
+    top: 24vh;
+    gap: 4%;
+    flex-direction: column;
+  }
+
+  .circle-pay:hover {
+    background-color: rgb(49, 0, 134);
+    transform: translateY(-7%);
+  }
+
+  .social a img {
+    display: flex;
+    width: 100%;
+    height: auto;
+    margin-top: 147%;
+  }
 
 
-
-
+}
