--- a/style.css
+++ b/style.css
@@ -5,9 +5,7 @@
     background-color: white;
     border-radius: 13px;
 }
-html{
-    background: linear-gradient(to bottom, black, #001f33, black);
-}
+
 
 
 .price-row-one,
@@ -90,7 +88,7 @@ body {
     opacity: 100%;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
     }
-video{
+.hero{
     /* max-width: 100%; */
     max-height: 100%;
     object-fit: cover;
@@ -268,6 +266,10 @@ align-items: center;
     opacity: 80%;
     margin-top: 15%;
     position: relative;
+}
+.footer a:hover{
+    transform: translateY(-7%);
+
 }
 
 
