--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
  this is a solution for over come those bugs for now.
  dont remove it*/
 
+ /*This site is responsive for 480px and 760 px*/
+
 
 body {
     display: flex;
